@@ -3745,4 +3745,5 @@ Changelog for GXemul:
 		instruction (it worked like extu!).
 		Adding disassembly of all 88100 floating point instructions.
 		Minor updates to make the code build with GCC "4.4.0 20081017".
-20081116	Implementing the m88k flt.ss and flt.ds instructions.
+20081116	Implementing the m88k flt.ss, flt.ds, and fadd.dds floating
+		point instructions.
